--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lenis": "^1.3.11",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,7 +25,6 @@
     "eslint-config-next": "15.5.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
